Funcionalidade:  Adicionar Tarefa

--- a/src/lista-tarefa.html
+++ b/src/lista-tarefa.html
@@ -29,7 +29,7 @@
             </div>
         </article>
     </main>
-    <script type="module" src="./js/lista-tarefas.js"></script>
+    <script type="module" src="./js/lista-tarefa.js"></script>
 </body>
 
 </html>
